There are some ineffinencies in our double to int conversion, they have been rectified. (bug 728852, r=jbramley)